Update component ui/main.reel/

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -22,6 +22,9 @@
                 "draggable": "true"
             }
         },
+        "content": {
+            "prototype": "montage/ui/slot.reel"
+        },
         "contentArea": {
             "prototype": "montage/ui/slot.reel",
             "properties": {
@@ -81,7 +84,7 @@
         <div data-montage-id="topArea"></div>
         <div data-montage-id="contentArea">
             <div data-montage-id="treeMenu">
-
+                <div data-montage-id="slot"></div>
             </div>
         </div>
         <div data-montage-id="footArea"></div>
